homeworks/borysenko/module-03/lesson-08/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: ingress-course-app
spec:
  tls:
    - hosts:
        - course-app.127.0.0.1.sslip.io
      secretName: course-app-tls  # Ім'я секрету, який ми створили на кроці 2
  rules:
    - host: course-app.127.0.0.1.sslip.io
      http:
        paths:
          - path: /  
            pathType: Prefix
            backend:
              service:
                name: course-app-service
                port:
                  number: 80        # Порт ClusterIP сервісу (віртуальний 80)
